# packetnodebot

./: .gitignore  README.md  packetnodebot.yaml.sample  pyproject.toml
src/packetnodebot/: __init__.py  bpq.py  common.py  discord.py
